[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Jarkko Mäenrinta <73038801+jarkmaen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
